@@ -1,0 +1,7 @@
+package io.github.thatgarlicdude.pacio;
+
+interface Closable {
+	
+	/**Closes something from memory.*/
+	public abstract void close();
+}
