@@ -1,29 +1,0 @@
-/*
- * Copyright 2025 GarlicDude
- * 
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- * 
- * 	http://www.apache.org/licenses/LICENSE-2.0
- * 
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-package io.github.thatgarlicdude.pacio;
-
-import java.io.IOException;
-
-/**An interface where classes can either open or close a file.*/
-public interface Openable {
-	
-	/**Opens a file in the file system.*/
-	public abstract void open() throws IOException;
-	
-	/**Closes a file in the file system.*/
-	public abstract void close();
-}
